# obsidian-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TESTING_SUMMARY.md  TEST_FIXES.md  download_movie_posters.py  embed_posters.py  fix_wikilinks.py  genre_mappings.yaml  migrate_game_notes.py  obsidian_media_add.py  obsidian_media_updater.py  obsidian_tools.py  pyproject.toml  pytest.ini  requirements.txt  standardize_game_titles.py
.github/workflows/: ci.yml
lib/: __init__.py  backup.py  config.py  obsidian_utils.py  poster_downloader.py  poster_utils.py
lib/api/: __init__.py  base.py  googlebooks_client.py  igdb_client.py  musicbrainz_client.py  openlibrary_client.py  tmdb_client.py
tests/: conftest.py  test_cli.py
tests/fixtures/api_responses/: googlebooks_search.json  googlebooks_volume.json  igdb_game_details.json  igdb_game_search.json  igdb_oauth_token.json  musicbrainz_album_details.json  musicbrainz_album_search.json  openlibrary_author.json  openlibrary_book_search.json  openlibrary_book_work.json  tmdb_movie_details.json  tmdb_movie_search.json  tmdb_tv_details.json  tmdb_tv_search.json
tests/integration/: test_add_command.py  test_posters_command.py
tests/unit/: test_backup.py  test_config.py  test_obsidian_utils.py  test_poster_downloader.py  test_poster_utils.py
tests/unit/api/: test_factory.py  test_googlebooks_client.py  test_igdb_client.py  test_musicbrainz_client.py  test_openlibrary_client.py  test_tmdb_client.py
