[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-tools"
version = "1.3.0"
description = "CLI tools for managing media notes (movies, TV, games, albums, books) in Obsidian vaults"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mitchell Gaydash", email = "mitchell@gaydash.net" }]
keywords = ["obsidian", "cli", "media", "metadata", "tmdb", "igdb", "musicbrainz", "google-books", "markdown", "notes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "Pillow>=10.0.0",
    "igdb-api-v4==0.3.3",
    "musicbrainzngs>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "responses>=0.23.0",
    "freezegun>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/mgaydash/obsidian-tools"
Repository = "https://github.com/mgaydash/obsidian-tools"
Issues = "https://github.com/mgaydash/obsidian-tools/issues"
Changelog = "https://github.com/mgaydash/obsidian-tools/blob/main/CHANGELOG.md"

[project.scripts]
obsidian-tools = "obsidian_tools:main"

[tool.setuptools]
# Flat layout: a single top-level module plus the shared lib package.
# genre_mappings.yaml is loaded relative to lib/ (see obsidian_utils._load_genre_mappings),
# which resolves correctly under an editable install (pip install -e .).
py-modules = ["obsidian_tools"]

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Ensure the repo root is importable so `import obsidian_tools` / `from lib ...`
# work whether tests run via `pytest`, `python -m pytest`, or from an install.
pythonpath = ["."]
addopts = "-v --cov=lib --cov=obsidian_tools --cov-report=term-missing --cov-branch"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# pycodestyle errors, pyflakes, import sorting, and pycodestyle warnings.
select = ["E4", "E7", "E9", "F", "I", "W"]
